feat(button): correct red color

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -10,8 +10,8 @@
   --color-gold: #FFC107;
 
   /* default red, should be changed */
-
   --color-danger: #FF3D00;
+  --color-danger-dark: #D32F2F;
 
 }
 
